# activeledger-agent

./: AGENT.md  README.md  agent.py  pyproject.toml
.github/workflows/: ci.yml
.spark/: SHELL.md
.spark/active/: task-001.md
.spark/decisions/: decision-001.md
.spark/domain/: concept-001.md
.spark/lessons/: observation-001.md
.spark/questions/: hypothesis-001.md
activeledger_agent/: __init__.py
activeledger_agent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_activeledger_agent.py
