[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "activeledger-agent"
version = "0.2.1"
description = "activeledger domain agent for PLATO fleet"
requires-python = ">=3.10"
dependencies = [
    "fleet-agent>=0.2.0",
    "requests>=2.28",
]
[project.optional-dependencies]
dev = ["pytest>=7.0"]
[project.urls]
Homepage = "https://github.com/SuperInstance/activeledger-agent"

[tool.setuptools]
packages = ["activeledger_agent"]
